TestSuite/PascalABCTests/errors/err0062.pas
const rec : integer = nil;
begin
end.